[project]
name = "webcrawler"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "base36>=0.1.1",
    "beautifulsoup4>=4.14.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
notify = [
    "apprise>=1.9.5",
]
selenium = [
    "selenium>=4.36.0",
]

[tool.uv]
override-dependencies = [
    "pywin32; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "yapf>=0.43.0",
]
